--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -3,9 +3,10 @@
 {% block content %}
 <p>Add a new topic:</p>
 
-<form action="{% url 'learning_log:new_topic' %}" method='post'></form>
-{% csrf_token %}
-{{ form.as_p }}
-<button name="submit">add topic</button>
+<form action="{% url 'learning_logs:new_topic' %}" method='post'>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button name="submit">add topic</button>
+</form>
 
 {% endblock content %}
