--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -28,7 +28,13 @@
             <span class="navbar-text">Hello, {{ user.username }}.</span>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
+<!--                операция выхода в Django должна быть выполнена с помощью POST запроса, чтобы обеспечить безопасность и защиту от CSRF-атак.-->
+<!--            <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>-->
+                <form action="{% url 'users:logout' %}" method="post">
+<!--                    {% csrf_token %} для защиты от CSRF-атаки и чтобы метод был указан как POST.-->
+                {% csrf_token %} 
+                    <button type="submit" class="btn btn-link nav-link">Log out</button>
+                </form>
             </li>
             {% else %}
             <li class="nav-item">
