--- a/learning_logs/templates/learning_logs/new_entry.html
+++ b/learning_logs/templates/learning_logs/new_entry.html
@@ -1,14 +1,19 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+<h2><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></h2>
+{% endblock page_header %}
 
 {% block content %}
 
-<p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
-
 <p>Add a new entry:</p>
-<form action="{% url 'learning_logs:new_entry' topic.id %}" method='post'>
+<form method="post" action="{% url 'learning_logs:new_entry' topic.id %}" class="form">
+    {% bootstrap_form form %}
     {% csrf_token %}
-    {{ form.as_p }}
+    {% buttons %}
     <button name='submit'>add entry</button>
+    {% endbuttons %}
 </form>
 
 {% endblock content %}
