--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -28,7 +28,7 @@
             <span class="navbar-text">Hello, {{ user.username }}.</span>
             </li>
             <li class="nav-item">
-<!--            Операция выхода в Django должна быть выполнена с помощью POST запроса,
+<!--            Операция выхода в Django должна быть выполнена с помощью POST запроса (а не GET),
                 чтобы обеспечить безопасность и защиту от CSRF-атак.-->
 <!--            <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>-->
                 <form action="{% url 'users:logout' %}" method="post">
