--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -30,9 +30,9 @@
             <li class="nav-item">
 <!--            Операция выхода в Django должна быть выполнена с помощью POST запроса (а не GET),
                 чтобы обеспечить безопасность и защиту от CSRF-атак.-->
-<!--            <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>-->
+<!--            Не верный запрос (GET)<a class="nav-link" href="{% url 'users:logout' %}">Log out</a>-->
                 <form action="{% url 'users:logout' %}" method="post">
-<!--                    {% csrf_token %} для защиты от CSRF-атаки и чтобы метод был указан как POST.-->
+<!--            {% csrf_token %} для защиты от CSRF-атаки и чтобы метод был указан как POST.-->
                 {% csrf_token %}
                     <button type="submit" class="btn btn-link nav-link">Log out</button>
                 </form>
